Upload All Projects and Files

--- a/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service.csproj
+++ b/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service.csproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ApsimFilesController.cs" />
+    <Compile Include="Controllers\Tests.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -107,6 +108,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Apsim.Shared\APSIM.Shared.csproj">
+      <Project>{e243ae8d-35e3-4397-b180-ef1e8a91ae8c}</Project>
+      <Name>APSIM.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
