--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,34 @@
-APSIM.PerformanceTests.Collector/bin/
-APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/obj/Release/TransformWebConfig/original/Web.config
-APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/bin
-APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/obj/
-APSIM.PerformanceTests.Service/packages/
-APSIM.PerformanceTests.Collector/packages/
-APSIM.PerformanceTests.Collector/obj/
+
+#ignore thumbnails created by windows
+Thumbs.db
+#Ignore files build by Visual Studio
+*.obj
+*.exe
+*.pdb
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+/Docs/html
+*.db
+packages/
+*.sum
+Documents/
+*.csv
