--- a/APSIM.PerformanceTests.Collector/App.config
+++ b/APSIM.PerformanceTests.Collector/App.config
@@ -5,7 +5,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
-    <add key="searchDirectory" value="C:/Users/cla473/Dropbox/APSIMInitiative/ApsimX/Tests/;C:\ApsimWork\Prototypes/"></add>
+    <add key="searchDirectory" value="C:/Users/cla473/Dropbox/APSIMInitiative/ApsimX/Tests/;C:/Users/cla473/Dropbox/APSIMInitiative/ApsimX/Prototypes/"></add>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
