--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal.csproj
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -147,23 +148,31 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ApsimController.cs" />
+    <Compile Include="Controllers\TestsController.cs" />
     <Compile Include="DataAccessLayer\ApsimDBContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ApsimFile.cs" />
     <Compile Include="Models\PredictedObservedDetail.cs" />
+    <Compile Include="Models\PredictedObservedTest.cs" />
     <Compile Include="Models\PredictedObservedValue.cs" />
     <Compile Include="Models\Simulation.cs" />
+    <Compile Include="ModelViews\ApsimIndex.cs" />
+    <Compile Include="ModelViews\PullRequest.cs" />
+    <Compile Include="ModelViews\SimFile.cs" />
+    <Compile Include="ModelViews\POTest.cs" />
+    <Compile Include="ModelViews\TestsIndex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\PullRequest.cs" />
-    <Compile Include="ViewModel\PullRequestDetail.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\StyleSheet1.css" />
+    <Content Include="Content\Images\ApsimNextGeneration.png" />
+    <Content Include="Content\Images\apsim_logo.png" />
+    <Content Include="Content\Images\content_bg.png" />
+    <Content Include="Content\Images\hd_bg.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -195,8 +204,11 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Apsim\Index.cshtml" />
+    <Content Include="Views\Apsim\ShowSimFiles.cshtml" />
+    <Content Include="Views\Tests\Index.cshtml" />
+    <Content Include="Views\Tests\ShowGraph.cshtml" />
+    <Content Include="Views\Tests\ShowGrid.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
