--- a/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/Web.config
+++ b/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/Web.config
@@ -7,8 +7,8 @@
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5"
-				 maxRequestLength="2147483647" executionTimeout="600" />
+	<customErrors mode="Off"/>
+	<httpRuntime targetFramework="4.5" maxRequestLength="2147483647" executionTimeout="600" />
   </system.web>
   <system.webServer>
     <handlers>
@@ -17,10 +17,13 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+	<modules>
+        <remove name="WebDAVModule" />
+    </modules>
     <security>
-    <requestFiltering>
-        <requestLimits maxAllowedContentLength="2147483648" />
-    </requestFiltering>
+		<requestFiltering>
+			<requestLimits maxAllowedContentLength="2147483648" />
+		</requestFiltering>
     </security>   
   </system.webServer>
   <runtime>
