Update of all Projects.

--- a/APSIM.PerformanceTests.Collector/App.config
+++ b/APSIM.PerformanceTests.Collector/App.config
@@ -6,6 +6,7 @@
   </configSections>
   <appSettings>
     <add key="searchDirectory" value="C:/ApsimWork/Tests/Validation/;C:/ApsimWork/Prototypes/"></add>
+    <add key="serviceAddress" value="http://www.apsim.info/"></add>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
