Update all Projects and create duplicate version of Service for transfer of database to CSIRO server

--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.Release.config
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.Release.config
@@ -13,6 +13,8 @@
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
+    value="storage=file;timeout=20;dir=E:\Sites\APSIM-Sites\PerformanceTests.Portal\TempImagesFolder\;" 
+    value="storage=file;timeout=20;dir=D:\Websites\APSIM.PerformanceTests.Portal\TempImagesFolder\;" 
   -->
   <appSettings>
     <add key="ChartImageHandler" 
