Committing all chagnes

--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.ApsimInfo.config
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.ApsimInfo.config
@@ -13,13 +13,18 @@
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-    value="storage=file;timeout=20;dir=E:\Sites\APSIM-Sites\APSIM.PerformanceTests\TempImagesFolder\;" 
-    value="storage=file;timeout=20;dir=D:\Websites\APSIM.PerformanceTests.Portal\TempImagesFolder\;" 
   -->
   <appSettings>
-    <add key="ChartImageHandler" 
-         value="storage=file;timeout=20;dir=D:\Websites\APSIM.PerformanceTests.Portal\TempImagesFolder\;" 
-         xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ChartImageHandler"
+         value="storage=file;timeout=20;dir=D:\Websites\APSIM.PerformanceTests.Portal\TempImagesFolder\;"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+
+    <add key="serviceAddress" value="http://www.apsim.info/" 
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+
+    <add key="connectStr" value="D:\Websites\"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+
   </appSettings>  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
