--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.CsiroApsim.config
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.CsiroApsim.config
@@ -14,6 +14,18 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings>
+    <add key="ChartImageHandler"
+         value="storage=file;timeout=20;dir=E:\Sites\APSIM-Sites\APSIM.PerformanceTests\TempImagesFolder\;"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    
+    <add key="serviceAddress" value="https://apsim.csiro.au/" 
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+
+    <add key="connectStr" value="E:\Sites\APSIM-Sites\"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+
+  </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
