--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.config
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.config
@@ -9,10 +9,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
-    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=D:\Websites\APSIM.PerformanceTests.Portal\TempImagesFolder\;" />
-    <add key="serviceAddress" value="http://www.apsim.info/" />
-    <add key="ChartImageHandler_csiro" value="storage=file;timeout=20;dir=E:\Sites\APSIM-Sites\APSIM.PerformanceTests\TempImagesFolder\;" />
-    <add key="serviceAddress_csiro" value="https://apsim.csiro.au/" />
+    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=C:\TempImagesFolder\;" ></add>
+    <add key="serviceAddress" value="http://localhost:53187/" ></add>
+    <add key="connectStr" value="C:\Dev\PerformanceTests\" ></add>
   </appSettings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
