--- a/APSIM.PerformanceTests.Collector/App.config
+++ b/APSIM.PerformanceTests.Collector/App.config
@@ -5,9 +5,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
-    <add key="searchDirectory" value="C:/ApsimWork/Tests/;C:/ApsimWork/Prototypes/"></add>
-    <add key="serviceAddress_apsim" value="http://www.apsim.info/"></add>
-    <add key="serviceAddress_csiro" value="https://www.apsim.csiro.au/"></add>
+    <add key="searchDirectory" value="C:/Jenkins/workspace/1. GitHub pull request/ApsimX/Tests/;C:/Jenkins/workspace/1. GitHub pull request/ApsimX/Prototypes/"></add>
+    <add key="serviceAddress_apsim" value="http://www.apsim.info/" />
+    <add key="serviceAddress_csiro" value="https://apsim.csiro.au/" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
