--- a/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/Web.ApsimInfo.config
+++ b/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/Web.ApsimInfo.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
+<!-- For more information on using web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <!--
@@ -14,12 +14,18 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
-    <appSettings>
-    <add key="ChartImageHandler" 
-         value="storage=file;timeout=20;dir=C:\TempImagesFolder\;" 
-         xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-  </appSettings>      
+  <appSettings>
+    <add key="FilePath" 
+         value="D:\Websites\"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    
+    <add key="LogFilePath" 
+         value="D:\Websites\APSIM.PerformanceTests.Service\" 
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
+
   <system.web>
+    <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
