--- a/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/Web.config
+++ b/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="FilePath" value="C:\Dev\PerformanceTests\" />
+    <add key="LogFilePath" value="C:\Dev\PerformanceTests\" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
