--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal.csproj
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal.csproj
@@ -90,6 +90,7 @@
     <Content Include="Images\orange.png" />
     <Content Include="Images\red.png" />
     <Content Include="Images\white.png" />
+    <Content Include="Javascript\TestsGrids.js" />
     <Content Include="packages.config" />
     <Content Include="RenameVariable.aspx" />
     <Content Include="RenameTable.aspx" />
