--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal.csproj
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal.csproj
@@ -251,6 +251,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
