Fixed links after domain name change.

--- a/APSIM.PerformanceTests.Collector/App.config
+++ b/APSIM.PerformanceTests.Collector/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <appSettings>
     <add key="searchDirectory" value="C:/Jenkins/workspace/PullRequest_v2/ApsimX/Tests/UnderReview/;C:/Jenkins/workspace/PullRequest_v2/ApsimX/Tests/Validation/;C:/Jenkins/workspace/PullRequest_v2/ApsimX/Tests/Simulation/"></add>
-    <add key="serviceAddress_apsim" value="http://www.apsim.info/"/>
+    <add key="serviceAddress_apsim" value="http://apsimdev.apsim.info/"/>
     <add key="serviceAddress_csiro" value="https://apsim.csiro.au/"/>
   </appSettings>
   <startup>
