--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.ApsimInfo.config
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Web.ApsimInfo.config
@@ -19,7 +19,7 @@
          value="storage=file;timeout=20;dir=D:\Websites\APSIM.PerformanceTests.Portal\TempImagesFolder\;"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
 
-    <add key="serviceAddress" value="http://www.apsim.info/" 
+    <add key="serviceAddress" value="http://apsimdev.apsim.info/" 
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
 
     <add key="connectStr" value="D:\Websites\"
