--- a/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service.csproj
+++ b/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service/APSIM.PerformanceTests.Service.csproj
@@ -118,6 +118,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <EmbeddedResource Include="DeleteByPRIDNotByDate.sql" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
@@ -152,6 +153,7 @@
     <Compile Include="Controllers\AcceptStatsController.cs" />
     <Compile Include="Controllers\PORenameController.cs" />
     <Compile Include="Controllers\UpdateStatsController.cs" />
+    <Compile Include="Extensions\DbCommandExtensions.cs" />
     <Compile Include="Models\AcceptStatsLog.cs" />
     <Compile Include="Models\PORename.cs" />
     <Compile Include="Utilities\DBFunctions.cs" />
@@ -183,7 +185,7 @@
     <Folder Include="Views\Rename\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Apsim.Shared\APSIM.Shared.csproj">
+    <ProjectReference Include="..\..\..\ApsimX\APSIM.Shared\APSIM.Shared.csproj">
       <Project>{e243ae8d-35e3-4397-b180-ef1e8a91ae8c}</Project>
       <Name>APSIM.Shared</Name>
     </ProjectReference>
