Added tests which use SQL server localdb.

--- a/APSIM.PerformanceTests.Tests/APSIM.PerformanceTests.Tests.csproj
+++ b/APSIM.PerformanceTests.Tests/APSIM.PerformanceTests.Tests.csproj
@@ -78,7 +78,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="CreateTables.sql" />
+    <EmbeddedResource Include="CreateTables.sqlserver" />
+    <EmbeddedResource Include="CreateTables.sqlite" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
