Added another test for a complicated ApsimFile insert.
Also fixed some other broken unit tests. They all run green now.

--- a/APSIM.PerformanceTests.Tests/APSIM.PerformanceTests.Tests.csproj
+++ b/APSIM.PerformanceTests.Tests/APSIM.PerformanceTests.Tests.csproj
@@ -84,6 +84,10 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\accepted-wheat.json" />
+    <EmbeddedResource Include="Resources\WheatHarvestObsPred.json" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
